--- a/src/App.css
+++ b/src/App.css
@@ -34,7 +34,6 @@
   }
 }
 
-
 :root {
   --white: #ffffff;
   --black: #172241;
@@ -87,12 +86,16 @@ h3 {
   font-weight: 300;
 }
 
+.description {
+  display: flex;
+}
+
 .flex-container {
   display: flex;
   flex-direction: row-reverse;
   /* flex-flow: row wrap; */
   text-align: center;
-  max-width: 1400px;
+  max-width: 800px;
   margin: 2rem auto;
 }
 
@@ -128,31 +131,7 @@ input:focus {
   border: 1px solid var(--teal);
 }
 
-.nav-menu .active a {
-  color: var(--teal);
-}
-
-.nav-menu a {
-  position: relative;
-  display: block;
-  padding: 1rem;
-  font-size: 17px;
-  font-weight: 300;
-  color: #202121;
-  cursor: pointer;
-  background: #f4f7f6;
-  border-bottom: 1px solid #e6eaea;
-  text-decoration: none;
-  transition: all 0.3s ease;
-}
-
-.nav-menu a:hover {
-  background-color: var(--white);
-  -webkit-transition: background 0.3s ease-in-out;
-  transition: background 0.3s ease-in-out;
-}
-
-.app-item {
+.question-item {
   position: relative;
   width: 100%;
   -webkit-transition: background 0.3s ease-in-out;
@@ -199,43 +178,19 @@ input:focus {
   color: var(--gray-dark);
 }
 
-/*Nav Categories*/
-.nav-categories {
-  text-align: left;
-  flex: 0;
-  order: 1;
-}
-
-.nav-categories h2 {
-  cursor: pointer;
-}
-
-.nav-categories ul {
-  list-style-type: none;
-}
-
-.nav-categories li {
-  cursor: pointer;
-}
-
-.nav-categories li.selected {
-  background-color: rgb(87, 87, 206);
-  color: #ffffff;
-}
-
-.apps-list {
+.questions-list {
   flex: 1;
   order: 2;
   text-align: left;
 }
 
-.app {
+.question {
   margin: 10px;
   text-align: left;
   border-bottom: 1px solid black;
 }
 
-.app ul {
+.question ul {
   list-style-type: none;
 }
 
