--- a/src/App.css
+++ b/src/App.css
@@ -141,8 +141,20 @@ input:focus {
   border: 1px solid var(--teal);
 }
 
-button {
+button,
+input[type="submit"] {
   border: none;
+  background: var(--teal);
+  color: var(--white);
+  text-align: center;
+  text-decoration: none;
+  font-size: 16px;
+  padding: 15px 32px;
+  cursor: pointer;
+}
+
+.input {
+  margin: 10px;
 }
 
 .question-item {
